[gd_scene load_steps=6 format=3 uid="uid://ksyha1cm1b6o"]

[ext_resource type="Texture2D" path="res://Assets/NPC(temp).png" id="1_0apit"]
[ext_resource type="Script" path="res://Debug_Room/static_npc.gd" id="1_koqe8"]
[ext_resource type="FontFile" uid="uid://ygufj767va0w" path="res://Dex_Scene_Stuff/Assets/PokemonGb-RAeo.ttf" id="3_v53sx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xj3vv"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g58nm"]
radius = 11.0454

[node name="StaticNPC" type="StaticBody2D"]
script = ExtResource("1_koqe8")
dialogue_sentences = Array[String]([""])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_0apit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_xj3vv")

[node name="TalkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkArea"]
shape = SubResource("CircleShape2D_g58nm")

[node name="PopUp" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -20.0
offset_top = -11.0
offset_right = 329.0
offset_bottom = 12.0
scale = Vector2(0.115, 0.115)
theme_override_fonts/font = ExtResource("3_v53sx")
text = "Press \"Space\" to Talk. "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="TalkArea" to="." method="_on_talk_area_body_entered"]
[connection signal="body_exited" from="TalkArea" to="." method="_on_talk_area_body_exited"]
